# game

./: CMakeLists.txt  Fighter.cpp  Fighter.h  main.cpp
Source/: CMakeLists.txt  MasterFighter.cpp  RandomMasterPickingStrategy.cpp  RegularFighter.cpp
headers/: Fighter.h  IMasterPickingStrategy.h  MasterFighter.h  RandomMasterPickingStrategy.h  RegularFighter.h  Weapon.h
unittest/: CMakeLists.txt  Test_MasterFighter.cpp  catch.hpp
